--- a/package.json
+++ b/package.json
@@ -52,10 +52,18 @@
     "youch-terminal": "^2.1.5"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.2.2",
     "@adonisjs/core": "^5.8.0",
+    "@adonisjs/lucid": "^18.2.0",
     "@adonisjs/repl": "^3.1.0",
+    "@hubspot/api-client": "^7.1.2",
+    "@types/node-fetch": "^2.6.2",
+    "adonis5-jwt": "^1.1.7",
+    "luxon": "^3.0.4",
+    "node-fetch": "2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "sqlite3": "^5.1.2"
   }
 }
