--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "adonis5-jwt": "^1.1.7",
     "luxon": "^3.0.4",
     "node-fetch": "2",
+    "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
