--- a/package.json
+++ b/package.json
@@ -56,8 +56,13 @@
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.2.0",
     "@adonisjs/repl": "^3.1.0",
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
     "@hubspot/api-client": "^7.1.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "@openzeppelin/contracts": "^4.7.3",
     "adonis5-jwt": "^1.1.7",
+    "ethers": "^5.7.2",
     "luxon": "^3.0.4",
     "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
