Add logic for FLA smartcontract

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -22,7 +22,8 @@
     "@adonisjs/core",
     "@adonisjs/auth",
     "@adonisjs/lucid",
-    "adonis5-jwt"
+    "adonis5-jwt",
+    "@adonisjs/drive-s3"
   ],
   "aceProviders": [
     "@adonisjs/repl"
